add model for transfer, preliminary work on ui and tool

--- a/membership-card/background.tex
+++ b/membership-card/background.tex
@@ -55,6 +55,8 @@
 
 
 %% URL FOR WWW GUIDE!!11
+%% Waste management
+
 
 %% Consent propaganda: ask for hugs, ask for photo, don’t poop in bushes 
 %% https://www.11thprincipleconsent.org/consent-propaganda/rape-culture-pyramid/
