--- a/membership-card/background.tex
+++ b/membership-card/background.tex
@@ -6,6 +6,7 @@
 \usepackage{tikz}
 \usepackage{pifont}
 \usepackage[cm]{fullpage}
+\usepackage[export]{adjustbox}
 \begin{document}
 \pagestyle{empty}
 
@@ -47,7 +48,9 @@
   Cut and Fold to Make Your Very Own Membership Card!
 \end{center}
 
-
+\begin{figure*}[!b]
+\includegraphics[width=10cm,right]{Rape-Culture-v5_crop}
+\end{figure*}
 %% Front
 %% [Preferred Name] (prominently on top)
 %% VIP Member
@@ -69,7 +72,6 @@
 
 
 %% Consent propaganda: ask for hugs, ask for photo, don’t poop in bushes 
-%% https://www.11thprincipleconsent.org/consent-propaganda/rape-culture-pyramid/
 %% Ask facebook: space left over, make some gfx if you have a message
 
 
