bug: don't send email if form invalid or fails check

--- a/membership-card/background.tex
+++ b/membership-card/background.tex
@@ -21,8 +21,8 @@
       draw, dashed, anchor=west] {};
     \node at (-1.6,-1) {\includegraphics[width=2.4cm]{logo}};
     \node at (-4.2,1) {\scalebox{0.7}{\sc Platinum VIP Member}};
-    \node at (-7,-1.55) {\scalebox{0.7}{Member Number }};
-    \node at (-7,-2) {\scalebox{0.7}{Expires July 2021}};
+    \node at (-7,-2) {\scalebox{0.7}{Member Number }};
+    \node at (-7,-1.55) {\scalebox{0.7}{Expires July 2021}};
     \node at (2.6,1.1) {\begin{minipage}{4.5cm}
         \fontfamily{qcs}\selectfont \footnotesize
         The bearer of this card is a genuine and authorized
@@ -47,6 +47,7 @@
   \\
   Cut and Fold to Make Your Very Own Membership Card!
 \end{center}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 
 \begin{figure*}[!b]
 \includegraphics[width=10cm,right]{Rape-Culture-v5_crop}
