confirm email address too

--- a/membership-card/child.tex
+++ b/membership-card/child.tex
@@ -24,6 +24,7 @@
     \node at (-7,-2) {\scalebox{0.7}{Expires July 2021}};
     \node at (2.6,1.1) {\begin{minipage}{4.5cm}
         \fontfamily{qcs}\selectfont \footnotesize
+        \center
         The bearer of this card is a genuine and authorized \\
         {\normalsize \textbf{member}} \\
         \footnotesize of The Borderland, so please treat them right good forever.
