append rather than replace csv, inviter name

--- a/membership-card/background.tex
+++ b/membership-card/background.tex
@@ -20,15 +20,15 @@
     \node (back) [rectangle, rounded corners=3mm, minimum height=53.98mm, minimum width=85.6mm,
       draw, dashed, anchor=west] {};
     \node at (-1.6,-1) {\includegraphics[width=2.4cm]{logo}};
+    \node at (-4.2,1) {Burn Burnernamsen};
     \node at (-4.2,1) {\scalebox{0.7}{\sc Platinum VIP Member}};
-    \node at (-7,-2) {\scalebox{0.7}{Member Number }};
+    \node at (-7,-2) {\scalebox{0.7}{Member Number } 12456};
     \node at (-7,-1.55) {\scalebox{0.7}{Expires July 2021}};
     \node at (2.6,1.1) {\begin{minipage}{4.5cm}
         \fontfamily{qcs}\selectfont \footnotesize
         The bearer of this card is a genuine and authorized
         {\normalsize \textbf{member}} 
-        \footnotesize of The Borderland, so please treat them right good forever.
-        
+        \footnotesize of The Borderland, so please treat them right good forever.        
         \end{minipage}};
     \node at (-7,2.86) [] { \Large \ding{33} };
     \node at (7,-2.87) [rotate=180] { \Large \ding{33} };
@@ -45,13 +45,27 @@
     \node at (4.5, -2.4) {\tiny \textsc{This Card is Personal \& Non-Transferable} };
   \end{tikzpicture}
   \\
-  Cut and Fold to Make Your Very Own Membership Card!
+  Cut and Fold to Make Your Very Own Membership Card!  \\
 \end{center}
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+\begin{center}
+  \tiny Advertisements
+\end{center}
 
 \begin{figure*}[!b]
-\includegraphics[width=10cm,right]{Rape-Culture-v5_crop}
+  \centering
+  \begin{minipage}{.5\textwidth}
+    If you experience:
+    \begin{itemize}
+    \item a
+      \end{itemize}
+  \end{minipage}
+  \begin{minipage}{.4\textwidth}
+    \includegraphics[width=10cm,right]{Rape-Culture-v5_crop}
+  \end{minipage}
 \end{figure*}
+
+
 %% Front
 %% [Preferred Name] (prominently on top)
 %% VIP Member
