--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-  * email texts for replication and lottery
+  * waiting list: send voucher for all products
 
   * membership card
   * child membership card
