--- a/membership-card/background.tex
+++ b/membership-card/background.tex
@@ -20,15 +20,15 @@
     \node (back) [rectangle, rounded corners=3mm, minimum height=53.98mm, minimum width=85.6mm,
       draw, dashed, anchor=west] {};
     \node at (-1.6,-1) {\includegraphics[width=2.4cm]{logo}};
-    \node at (-4.2,1) {Burn Burnernamsen};
-    \node at (-4.2,1) {\scalebox{0.7}{\sc Platinum VIP Member}};
-    \node at (-7,-2) {\scalebox{0.7}{Member Number } 12456};
+    \node at (-4.2,2) {\Huge Burn Burnersson};
+    \node at (-4.2,1.3) {\scalebox{0.7}{\sc Platinum VIP Member}};
+    \node at (-7,-2) {\scalebox{0.7}{Member Number }};
     \node at (-7,-1.55) {\scalebox{0.7}{Expires July 2021}};
     \node at (2.6,1.1) {\begin{minipage}{4.5cm}
         \fontfamily{qcs}\selectfont \footnotesize
         The bearer of this card is a genuine and authorized
         {\normalsize \textbf{member}} 
-        \footnotesize of The Borderland, so please treat them right good forever.        
+        \footnotesize of The Borderland, and can do whatever they want whenever they want. 
         \end{minipage}};
     \node at (-7,2.86) [] { \Large \ding{33} };
     \node at (7,-2.87) [rotate=180] { \Large \ding{33} };
@@ -55,13 +55,33 @@
 \begin{figure*}[!b]
   \centering
   \begin{minipage}{.5\textwidth}
-    If you experience:
+    The Borderland is an inclusive place for everyone to express themselves and experiment. As with any event this size, things can happen.
+
+    If you experience, witness, or suspect:
+
+    % double list?
     \begin{itemize}
-    \item a
-      \end{itemize}
+      \item Racism
+      \item Sexism
+      \item Homophobia
+      \item Transphobia
+      \item Unwanted attention
+      \item Predatory behavior
+      \item Assault % small space
+    \end{itemize}
+
+    The \emph{\underline{Consent Team}} is here to check in, mediate, support, care, and ensure accountability.
+
+    Ask for us through \emph{Sanctuary} or any \emph{Clown Police} clown, or directly via Signal, SMS, Whatsapp, or voice:
+
+    \begin{center}
+      \Large{+45 11 22 33 44}
+    \end{center}
+
+    Inclusion is everyone's responsibility. If you see something that looks non-consensual or someone who looks like they're in distress, it's your job to check in.
   \end{minipage}
-  \begin{minipage}{.4\textwidth}
-    \includegraphics[width=10cm,right]{Rape-Culture-v5_crop}
+  \begin{minipage}{.49\textwidth}
+    \includegraphics[width=8.8cm,right]{Rape-Culture-v5_crop}
   \end{minipage}
 \end{figure*}
 
