fix graph labels

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
   * implement caching using x-modified-since for fetch paginated
   * put the invite link straight in peoples profiles
-
+ • wya to do first round of +1 easier: just block off half the quota?   
   * waiting list: send voucher for all products
 
   * membership card
